# golf-fiddling

./: .gitignore  CLAUDE.md  GUI_REFACTORING_PLAN.md  README.md  analyze.py  dump.py  editor.py  hex_to_bin.py  pyproject.toml  run_editor.py  run_editor.spec  todo
courses/japan/: hole_01.json  hole_03.json  hole_04.json  hole_06.json  hole_08.json  hole_12.json  hole_13.json  hole_15.json  hole_16.json  hole_18.json
courses/uk/: hole_01.json  hole_02.json  hole_03.json  hole_04.json  hole_05.json  hole_06.json  hole_09.json  hole_12.json  hole_14.json  hole_15.json  hole_16.json  hole_17.json  hole_18.json
courses/us/: hole_03.json  hole_04.json  hole_07.json  hole_08.json  hole_09.json  hole_10.json  hole_11.json  hole_13.json  hole_15.json  hole_16.json  hole_17.json  hole_18.json
data/sprites/: ball.json  flag.json  green-cup.json  tee-block.json
data/tables/: terrain_neighbors.json  terrain_neighbors.json.bak
docs/: forest_notes.md  fringe_generation_sketch.py  multi_bank_terrain.md
editor/: NEIGHBOR_SUGGESTIONS_IDEAS.md  __init__.py  application.py  main.py  resources.py
editor/algorithms/: __init__.py  better_forest_fill.py  fringe_generator.py  green_fill.py  rough_fill.py
editor/controllers/: __init__.py  better_forest_fill.py  editor_state.py  event_handler.py  forest_fill.py  highlight_state.py  stamp_library.py  transform_drag_state.py  transform_logic.py  undo_manager.py  view_state.py
editor/core/: __init__.py  chr_rendering.py  constants.py  data_model.py  pygame_rendering.py
editor/data/: __init__.py  category_tree.py  clipboard_data.py  stamp_data.py
editor/rendering/: __init__.py  greens_renderer.py  grid_renderer.py  highlight_utils.py  render_context.py  selection_renderer.py  sprite_renderer.py  stamp_renderer.py  terrain_renderer.py
editor/tools/: __init__.py  add_row_tool.py  base_tool.py  carpet_paint_tool.py  cycle_tool.py  eyedropper_tool.py  forest_fill_tool.py  fringe_generation_tool.py  green_fill_tool.py  measure_tool.py  metadata_editor_tool.py  paint_tool.py  palette_tool.py  remove_row_tool.py  rough_fill_tool.py  row_operations_tool.py  selection_tool.py  stamp_tool.py  tool_manager.py  transform_tool.py
editor/ui/: __init__.py  category_tree_view.py  dialogs.py  metadata_dialog.py  pickers.py  stamp_browser.py  stamp_creation_dialog.py  toolbar.py  widgets.py
editor/utils/: __init__.py  compact_json.py
golf/core/: __init__.py  chr_tile.py  compressor.py  course_validation.py  course_writer.py  decompressor.py  instrumented_io.py  neighbor_validator.py  packed_course_writer.py  packing.py  palettes.py  rom_reader.py  rom_utils.py  rom_writer.py
golf/formats/: compact_json.py  hex_utils.py  hole_data.py
golf/rendering/: pil_renderer.py  pil_sprite.py
tests/: conftest.py  test_forest_fill_integration.py  test_fringe_generator.py
tests/integration/: test_greens_roundtrip.py  test_packed_course_write.py  test_patch_application.py  test_terrain_roundtrip.py  test_undo_redo_integration.py  test_write_roundtrip.py
tests/unit/: test_carpet_paint.py  test_dict_matching.py  test_event_handler.py  test_fringe_generator.py  test_green_fill.py  test_packed_course_writer.py  test_packing.py  test_patches.py  test_position_tool.py  test_repeat_codes.py  test_rom_utils.py  test_rough_fill.py  test_row_operations.py  (+3 more)
tools/: analyze.py  analyze_forest.py  analyze_neighbors.py  analyze_transform.py  compare_traces.py  dump.py  expand_dict.py  extract_tables.py  hex2bin.py  render_web.py  visualize.py  write.py
web/: app.js  green-modal.js  index.html  measure.js  metadata.json  renderer.js  styles.css  ui.js
(+35 files in other folders)
