[project]
name = "golf-fiddling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
    "pillow>=12.0.0",
    "pygame>=2.6.1",
]

[project.scripts]
golf-editor = "editor.main:main"
golf-dump = "dump:main"
golf-analyze = "analyze:main"
golf-visualize = "visualize:main"
golf-hex2bin = "hex_to_bin:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["editor"]
