[project]
name = "golf-fiddling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
    "pillow>=12.0.0",
    "pygame>=2.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
golf-editor = "editor.main:main"
golf-dump = "tools.dump:main"
golf-analyze = "tools.analyze:main"
golf-visualize = "tools.visualize:main"
golf-hex2bin = "tools.hex2bin:main"
golf-expand-dict = "tools.expand_dict:main"
golf-extract-tables = "tools.extract_tables:main"
golf-analyze-transform = "tools.analyze_transform:main"
golf-analyze-neighbors = "tools.analyze_neighbors:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=golf",
    "--cov-report=term-missing",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["golf", "editor", "tools"]
