[project]
name = "golf-fiddling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
    "pillow>=12.0.0",
    "plyer>=2.1.0",
    "pygame>=2.6.1",
]

[project.scripts]
golf-editor = "editor.main:main"
golf-dump = "tools.dump:main"
golf-write = "tools.write:main"
golf-analyze = "tools.analyze:main"
golf-visualize = "tools.visualize:main"
golf-hex2bin = "tools.hex2bin:main"
golf-expand-dict = "tools.expand_dict:main"
golf-extract-tables = "tools.extract_tables:main"
golf-analyze-transform = "tools.analyze_transform:main"
golf-analyze-neighbors = "tools.analyze_neighbors:main"
golf-analyze-greens-neighbors = "tools.analyze_greens_neighbors:main"
golf-render-web = "tools.render_web:main"
golf-analyze-putting = "tools.analyze_putting_surface:main"
golf-compare-traces = "tools.compare_traces:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=golf",
    "--cov=editor",
    "--cov-report=term-missing",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pyright>=1.1.407",
    "ruff>=0.14.10",
    "pyinstaller>=6.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["golf", "editor", "tools"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # import sorting
    "N", # pep-8 naming
    "UP", # pyupgrade
    "B", # flake8-bugbear (common bugs)
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (let autoformatting handle)
]

[tool.pyright]
venvPath = "."
venv = ".venv"
